[package]
name = "lersi"
version = "0.1.0"
edition = "2021"
description = "MCP server for LLM-driven spaced repetition learning"
license = "MIT"

[[bin]]
name = "lersi"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "5"
